# Shift

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: AlphaBitmap.h.C22087148F630EC6.idx  BaseTypes.h.789C0B4AAAD699FE.idx  BitScale.cpp.A5F80B1C90A5CFA6.idx  BitScale.h.387BBFA65D76B444.idx  BitUtility.h.DE752B2E76DBBABD.idx  Bitmap.h.EE0706C6EE645E35.idx  CodeGen.cpp.F17FB5D02A79AF45.idx  ColorRgba.h.6DFF8F75461E3348.idx  Common.h.3F4E98F50CE72DD0.idx  Constant.cpp.A69AE66954DA99C4.idx  ConstantUnion.h.425EF279163CDAA2.idx  DebugInfo.h.976705A6A76B4A67.idx  DirStackFileIncluder.h.5DEFE3D5536BF16B.idx  GLSL.ext.AMD.h.733A62B13A258889.idx  GLSL.ext.ARM.h.3C9AE9898603BB5E.idx  GLSL.ext.EXT.h.C281140D5B998FE8.idx  GLSL.ext.KHR.h.396C9E1A311AD4BC.idx  GLSL.ext.NV.h.CE71AA615B45B699.idx  GLSL.ext.QCOM.h.2A502337572161C9.idx  GLSL.std.450.h.10FC7386C4E60C87.idx  GLSL.std.450.h.2AB6EA41AD8DBF44.idx  GLSL.std.450.h.93684D3F23F6029A.idx  GLSL.std.450.h.CE9780F6434E7D42.idx  GlslangToSpv.cpp.A460D7322F3FB98A.idx  GlslangToSpv.h.E0738C4E7FED4AE1.idx  InReadableOrder.cpp.580F055090666697.idx  InfoSink.cpp.01C89CBE51B7C672.idx  InfoSink.h.6E6386EA05CB66CA.idx  Initialize.cpp.E82538D03BE89038.idx  Initialize.h.A63AA79B4AAF0104.idx  IntermTraverse.cpp.712E63032A3FC981.idx  Intermediate.cpp.3DEDE0E3F3E9A573.idx  Interval.h.45268AD60F8D5D5D.idx  Link.cpp.0056FC20854B44AF.idx  LiveTraverser.h.75FBE3AE737DB652.idx  Logger.cpp.F6B0BEE40E1E9A91.idx  Logger.h.21C307A1ECCDA448.idx  Math.hpp.0EE7A330A1660271.idx  MortonTable.cpp.898ADABD35CD3C69.idx  MortonTable.h.70475FC101224AF9.idx  (+1432 more)
examples/: CMakeLists.txt
examples/computeShader/: CMakeLists.txt  computeShader.cpp
examples/cube/: CMakeLists.txt  cube.cpp
examples/fluidSim/: CMakeLists.txt  fluidSim.cpp  fluidSimUtils.hpp  velocityCube.hpp  velocityField.cpp  velocityField.hpp  velocityFieldCube.cpp  velocityFieldCube.hpp  velocityFieldGrid.cpp  velocityFieldGrid.hpp
examples/helloBgfx/: CMakeLists.txt  helloBgfx.cpp
examples/helloTri/: CMakeLists.txt  helloTri.cpp
examples/imgui/: CMakeLists.txt
examples/quad/: CMakeLists.txt  quad.cpp
examples/quadRendering/: CMakeLists.txt  quadRendering.cpp
ext/: CMakeLists.txt
ext/gleq/: gleq.hpp
include/: appBase.hpp  appBaseGLFW.hpp  utilesGLFW.hpp  utils.hpp  utilsBgfx.hpp  utilsGLFW.hpp
include/utils/: bgfx.hpp  camera.hpp  common.hpp  glfw.hpp  imgui.hpp
shaders/common/: quad_fs.sc  quad_varying.def.sc  quad_vs.sc
shaders/examples/computeShader/: buffer_cs.sc  image_cs.sc  quad_fs.sc
shaders/examples/cube/: fs_cube.sc  varying.def.sc  vs_cube.sc
shaders/examples/fluidSim/: addSource_cs.sc  advect_cs.sc  cube_fs.sc  cube_varying.def.sc  cube_vs.sc  density_addSource_cs.sc  density_advect_cs.sc  density_diffuse_cs.sc  density_update_cs.sc  diffuse_cs.sc  fluidSim_utils.sh  init_cs.sc  quad_advect_fs.sc  quad_divergence_fs.sc  quad_fs.sc  quad_objectInter_fs.sc  quad_objectInter_varying.def.sc  quad_project_fs.sc  quad_varying.def.sc  quad_vs.sc  quad_ws_vs.sc  velocity_addSource_cs.sc  velocity_advect_cs.sc  velocity_project_cs.sc  velocity_reset_cs.sc  velocity_uniforms.sh  velocity_update_cs.sc
shaders/utils/: bgfx_compute.sh  bgfx_shader.sh  fluidSim_utils.sh
src/: CMakeLists.txt  appBase.cpp  appBaseGLFW.cpp
src/utils/: bgfx.cpp  camera.cpp  common.cpp  glfw.cpp  imgui.cpp
